--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.22",
+    "@types/mysql": "^2.15.15",
     "@types/nodemon": "^1.19.0",
     "@types/socket.io": "^2.1.8",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.18",
+    "mysql": "^2.18.1",
     "socket.io": "^2.3.0",
     "ts-node": "^8.10.2"
   },
