function add folder is ready, now function get folder for diplay the folder added.

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,14 @@
     "@types/mongoose": "^5.7.22",
     "@types/mysql": "^2.15.15",
     "@types/nodemon": "^1.19.0",
+    "@types/sequelize": "^4.28.9",
     "@types/socket.io": "^2.1.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.18",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5",
     "socket.io": "^2.3.0",
     "ts-node": "^8.10.2"
   },
